Added list and title
list and title

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -11,6 +11,15 @@
 </head>
 <body>
 
+<h1>Things that I love</h1>
+
+<ul>
+<li>Horses</li>
+<li>Hunting</li>
+<li>Hiking</li>
+<li>My Man</li>
+<li>My family</li>
+</ul>
 	
 
 
