added Image and discription

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -20,8 +20,10 @@
 <li>My Man</li>
 <li>My family</li>
 </ul>
-	
 
+<p>This is my brother, my dad and I 3 years ago with our bucks.</p>
+<img src="brent dad and I bucks.jpg" alt="bucks from 2012">
+<p>It was a great hunting season in Wyomming</p>
 
 </body>
 </html>
