images added and descriptions

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -25,5 +25,14 @@
 <img src="brent dad and I bucks.jpg" alt="bucks from 2012">
 <p>It was a great hunting season in Wyomming</p>
 
+<p>This is My horse Chai</p>
+<img src="Chai.jpg">
+
+<p>This is my best friend, who also happens to be my man.</p>
+<img src="coop and I.jpg">
+
+<p>This is when I tried to learn how to fly fish, key work, try.</p>
+<img src="fishing on the river.jpg">
+
 </body>
 </html>
